# Im-building-an-OS-to-prove-a-point

rusty_os/: Cargo.toml  apple-arm64-macos-rusty_os.json  apple-arm64-rusty_os.json
rusty_os/.cargo/: config.toml
rusty_os/src/: main.rs  serial.rs  vga_buffer.rs
rusty_os/tests/: basic_boot.rs  should_panic.rs
