[package]
name = "rusty_os"
version = "0.1.0"
edition = "2021"

# set the panic strategy to abort both for dev and release profile
# usiong this to avoid the eh_personality language item (even though I have no idea what this is)
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bootloader = "0.9"# for some reason(I honestly don't know) if I update this to the latest version, it won't build
# also apple arm 64 is not supported yet
volatile = "0.2.6"# because I use a tutorial reference, the newest version is not compatible with it (I'll figure it out in the future)



[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/x86_64-rusty_os/debug/bootimage-rusty_os.bin"]


